# firstspirit-docs-rag

./: .env.example  .gitignore  CLAUDE.md  README.md
.archon/: config.yaml
.archon/artifacts/runs/32824a7a430c0b813fae0af044c3b71e/: implementation.md  plan-confirmation.md  plan-context.md  plan.md
.claude/skills/correction-from-issue/: SKILL.md
.claude/skills/frontend-prime/: SKILL.md
app/backend/: alembic.ini  config.py  main.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial.py  0002_feedback_submissions.py
app/backend/db/: postgres.py  repository.py  signup_attempts_repo.py  sqlite.py
app/backend/ingest/: __init__.py  url_list.py  vault.py
app/backend/llm/: chat.py  openrouter.py  providers.py
app/backend/rag/: catalog.py  citations.py  document_chunker.py  embeddings.py  expansion.py  retriever_hybrid.py  tools.py  vector_store.py
app/backend/routes/: conversations.py  feedback.py  messages.py  sources.py
app/backend/services/: crawler.py  extractor.py  github.py
app/backend/tests/: conftest.py  test_crawler.py  test_document_chunker.py  test_embeddings.py  test_extractor.py  test_ingest_url_list.py  test_ingest_vault.py  test_llm_providers.py  test_rag_tools.py  test_repository_sqlite.py  test_retriever_hybrid.py  test_routes_conversations.py  test_routes_feedback.py  test_routes_sources.py  test_services_github.py  test_vector_store.py
app/frontend/: biome.json  index.html  package.json  tailwind.config.js  vitest.config.ts
app/frontend/src/: App.tsx
app/frontend/src/__tests__/: ChatArea-refreshConversationsRef.test.tsx  Login-Signup-branding.test.tsx  authApi.test.ts
app/frontend/src/components/: BrandingHeader.tsx  ChatArea.tsx  ChatInput.test.tsx  ChatInput.tsx  DocumentExplorer.tsx  DocumentPreviewModal.tsx  FeedbackModal.test.tsx  Message.test.tsx  (+5 more)
deploy/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
deploy/sources/: URL List.md
deploy/sources/empty-vault/: .gitkeep
scripts/: migrate_pg_to_qdrant.py
(+15 files in other folders)
