[project]
name = "firstspirit-docs-rag-backend"
version = "0.1.0"
description = "FastAPI backend — RAG over FirstSpirit / Crownpeak documentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "alembic",
    "httpx",
    "python-dotenv",
    "openai",
    "qdrant-client[fastembed]>=1.12",
    "docling-core[chunking,chunking-openai]",
    "numpy",
    "bcrypt",
    "pyjwt",
    "email-validator",
    "trafilatura>=2.0",
    "pymupdf4llm>=0.0.30",
    "python-frontmatter>=1.1",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.2",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "respx==0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "venv",
    "data",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "(^|/)\\.venv/",
    "(^|/)venv/",
    "^data/",
    "^__pycache__/",
    "^dist/",
    "^build/",
]

[[tool.mypy.overrides]]
module = [
    "docling_core.*",
    "docling.*",
    "trafilatura.*",
    "pymupdf4llm.*",
    "frontmatter.*",
    "qdrant_client.*",
    "fastembed.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
